--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "cafeeveryone",
-  "description": "cafe every one",
+  "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node app"
+  },
   "dependencies": {
-    "express": "3.x"
+    "express": "3.0.4",
+    "ejs": "*"
   }
 }
